Fix chat overflowing the chat window

--- a/public/overlay.css
+++ b/public/overlay.css
@@ -107,6 +107,11 @@ legend {
   position: relative;
 }
 
+#chat-window {
+  height: 100%;
+  position: relative;
+}
+
 #chat {
   bottom: 0;
   font-size: 30px;
